# python_example_user_repository_2

./: Dockerfile  Makefile  README.md  SPEC.md  ai.txt  llms-full.txt  pyproject.toml
k8s/: deployment.yaml
src/: user_repository.py
tests/: test_core.py
